<resources>
    <string name="app_name">osrs wybin</string>

    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_track">Track</string>


    <string name="homepageHeader">Homepage</string>
    <string name="btnAuthenticationLogin">Login</string>
    <string name="btnTrackedUsers">Tracked users</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tbUsername">Username</string>
    <string name="tbPassword">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="wybin">wyBin</string>
    <string name="btnSignUp">Don\'t have an account? Sign up</string>
    <string name="register">Register</string>
    <string name="password_confirmation">Password (confirmation)</string>
    <string name="et_username">Username</string>
    <string name="account_verify">Verify</string>
    <string name="start_tracking">Start tracking</string>
    <string name="verify_text">Verify the account by entering an account name and clicking on the Verify button</string>
    <string name="verify_username">Username: %s</string>
    <string name="verify_level">Total level: %s (Experience: %s)</string>
    <string name="img">img</string>
</resources>
